# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Dokumentaatio/: Vaatimmusmaarittely.md  arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaika.md  vaatimmusmaarittely.md
laskarit/: komentorivi.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest___init___py.html  _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest__argcomplete_py.html  _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest__code___init___py.html  _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest__code_code_py.html  _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest__code_source_py.html  _home_joelw__cache_pypoetry_virtualenvs_maksukortti-iXYgR6Z4-py3_6_lib_python3_6_site-packages__pytest__io___init___py.html  (+100 more)
src/: field.py  fieldgenerator.py  gameloop.py  high_scores.py  index.py  mainmenu.py  menu.py  tile.py
src/database/: scores.db
src/game/: field.py  fieldgenerator.py  gameloop.py  tile.py
src/tests/: field_test.py  fieldgenerator_test.py  game_test.py  gameloop_test.py  tile_test.py
src/ui/: high_scores.py  mainmenu.py
(+4 files in other folders)
